<resources>
    <string name="app_name">androidTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="start">Start</string>
    <string name="play_via">Play via</string>
    <string name="email">Email</string>
    <string name="anon">Anonymous</string>
    <string name="enter_email">Enter email</string>
    <string name="email_e_com">email@e.com</string>
    <string name="start_g">Start the game</string>
    <string name="invalid_email">Invalid email</string>
    <string name="spin">SPIN</string>
    <string name="user_win">WIN %1$d</string>
    <string name="user_score">TOTAL %1$d</string>
    <string name="open_game">Open Game</string>
    <string name="open_webview">Open WebView</string>
</resources>