<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    tools:context=".ui.EmailFragment">


    <ImageView
        android:id="@+id/back_arrow_ic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.12" />



    <TextView
        android:id="@+id/enter_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chlea_r"
        android:text="@string/enter_email"
        android:textColor="@color/white"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="Email"
        android:background="@drawable/btn"
        android:fontFamily="@font/chlea_r"
        android:gravity="center"
        android:hint="@string/email_e_com"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_email"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/email_error_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/chlea_r"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btnv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/chlea_r"
        android:letterSpacing="0.1"
        android:text="@string/start_g"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>